--- a/s-messenger.html
+++ b/s-messenger.html
@@ -3,10 +3,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>S-Messenger</title>
 		<style>
-			.wrapper {
-				overscroll-behavior: none
-			}
-			
 			body {
 				font-family: "Courier";
 				font-size: 16px;
@@ -15,6 +11,7 @@
 				background: #000000;
 				margin: 0;
 				padding: 0;
+				overscroll-behavior: none;
 			}
 			
 			p {
