--- a/s-messenger.html
+++ b/s-messenger.html
@@ -13,10 +13,11 @@
 				padding: 0;
 				overscroll-behavior: none;
 				frame: { type: "none" };
-				overflow-y: hidden;
+				overflow: hidden;
+				position: relative;
 			}
 			html {
-				overflow-y: hidden;
+				overflow: hidden;
 			}
 			
 			p {
@@ -140,6 +141,11 @@
 			.windowButton:active {
 				filter: brightness(1.5);
 			}
+			.menuWindow {
+				background: #212121;
+				position: absolute;
+				z-index: 3;
+			}
 		</style>
 		<script>
 			//GLOBALVARS
@@ -156,7 +162,11 @@
 			var ddon = false;
 			var pinnedMessage;
 			var mhistory = [];
-			const version = "1.1.8";
+			const version = "1.1.9";
+			var dragOptions = false;
+			var optionsWindow;
+			var mouseprev = [0, 0];
+			var mouserel = [0, 0];
 
 			let deferredPrompt;
 			//APPLICATION
@@ -219,6 +229,7 @@
 			
 			
 			function Start(){
+				optionsWindow = document.getElementById("optionsMenu");
 				var input = document.getElementById("chatInput");
 				document.getElementById("versionShow").innerText = "Version "+version;
 				document.body.parentNode.addEventListener('click', function(event){
@@ -1044,11 +1055,54 @@
 				End();
 				close();
 			}
-		</script>
+			function Minimize(){
+				window.innerWidth = 100;
+				window.innerHeight = 100;
+				window.screenX = screen.width;
+				window.screenY = screen.height;
+				alwaysLowered = true;
+			}
+			function Options(){
+				optionsWindow.style.left = window.innerWidth/2 - 160;
+				optionsWindow.style.top = window.innerHeight/2 - 120;
+				if(optionsWindow.style.display == "block"){
+					optionsWindow.style.display = "none";
+					return;
+				}
+				optionsWindow.style.display = "block";
+			}
+			
+			function Drag(val){
+				dragOptions = val;
+			}
+			function MouseMove(event){
+				mouserel[0] = event.clientX-mouseprev[0];
+				mouserel[1] = event.clientY-mouseprev[1];
+				//console.log(mouserel);
+				if(dragOptions){
+					optionsWindow.style.top = parseInt(optionsWindow.style.top)+mouserel[1];
+					optionsWindow.style.left = parseInt(optionsWindow.style.left)+mouserel[0];
+				}
+				mouseprev[0]=event.clientX;
+				mouseprev[1]=event.clientY;
+			}
+			function TouchMove(event){
+				var touches = event.changedTouches;
+				mouserel[0] = touches[0].pageX-mouseprev[0];
+				mouserel[1] = touches[0].pageY-mouseprev[1];
+				console.log(dragOptions);
+				if(dragOptions){
+					optionsWindow.style.top = parseInt(optionsWindow.style.top)+mouserel[1];
+					optionsWindow.style.left = parseInt(optionsWindow.style.left)+mouserel[0];
+				}
+				mouseprev[0]=touches[0].pageX;
+				mouseprev[1]=touches[0].pageY;
+			}
+			</script>
 		<link rel="shortcut icon" href="favicon.png">
 		<link rel="manifest" href="manifest.json" crossorigin="use-credentials">
 	</head>
-	<body onload = "Start()" onbeforeunload="End()">
+	<body onload = "Start()" onbeforeunload="End()" onmousemove="MouseMove(event)" ontouchmove="TouchMove(event)" ontouchend="dragOptions = false;" onmouseup="dragOptions = false;">
 		<audio id="audio_message">
 			<source src="message.mp3">
 		</audio>
@@ -1058,12 +1112,17 @@
 		<div id="windowBorder" class=windowBorder>
 			<span style="padding:3px; padding-left: 6px; position: absolute; top: 0;">S-Messenger</span>
 			<img src="close.png" class=windowButton onclick="Exit()">
-			<img src="hide.png" class=windowButton>
-			<img src="options.png" style="margin-right: 8px" class=windowButton>
+			<img src="hide.png" class=windowButton onclick="Minimize()">
+			<img src="options.png" style="margin-right: 8px" class=windowButton onclick="Options()">
 		</div>
 		<div id="windowContent" style="display: block; position: absolute; display:inline-block; width: 100%; height: calc(100% - 24px);">
+			<div id="optionsMenu" class=menuWindow style="display: none; width: 320; height: 240;">
+				<div id="windowBorder" class=windowBorder onmousedown="dragOptions = true;" ontouchstart="dragOptions = true;">
+					<img src="close.png" class=windowButton onclick="document.getElementById('optionsMenu').style.display = 'none';">
+				</div>
+			</div>
 			<div id="servers" style="opacity: 0; position: absolute; width:100%;  height:100%">
-				<img id="scplogo" src="scpf.png" style="display: block; margin-left: auto; margin-right: auto; width: 25%; margin-top: 24px;" onload="Load()">
+				<img id="scplogo" src="scpf.png" style="display: block; margin-left: auto; margin-right: auto; width: 25%; margin-top: 24px;" onload="Load()" ondragstart="return false;">
 				<h1 align=CENTER>S-Messenger</h1>
 				<p align=CENTER>Websocket URL</p>
 				<input id="ws" class=inputbox style="display:block; margin-left: auto; margin-right: auto; width: 75%; margin-bottom:8px;" placeholder="Enter websocket URL">
@@ -1071,7 +1130,7 @@
 				<input id="un" class=inputbox style="display:block; margin-left: auto; margin-right: auto; width: 50%; margin-bottom:8px;" placeholder="Enter username">
 				<button id="connectbutton" class=uibutton style="display:block; margin-left: auto; margin-right: auto;" onclick="Connect()">Connect</button>
 				<h3 id="error" align=center style="color: red; opacity: 0;">ERROR</h3>
-				<div style="position: absolute; top: calc(100% - 48px); width: 100%;">
+				<div style="position: absolute; margin-top: 3em; width: 100%;">
 					<span align=CENTER id="versionShow" style="display: block;"></span>
 					<button id="updatebutton" class=uibutton style="display: block;margin-left: auto; margin-right: auto; margin-bottom: 4px;" onclick="location.reload()">Update</button>
 				</div>
