--- a/s-messenger.html
+++ b/s-messenger.html
@@ -235,6 +235,7 @@
 			
 			function Start(){
 				optionsWindow = document.getElementById("optionsMenu");
+				document.getElementById("notifperm").innerText = Notification.permission;
 				var input = document.getElementById("chatInput");
 				document.getElementById("versionShow").innerText = "Version "+version;
 				document.body.parentNode.addEventListener('click', function(event){
@@ -1135,6 +1136,8 @@
 				<div id="windowBorder" class=windowBorder onmousedown="dragOptions = true;" ontouchstart="TouchStart(event)">
 					<img src="close.png" class=windowButton onclick="document.getElementById('optionsMenu').style.display = 'none';">
 				</div>
+				<span style="margin:4px;">Notification permission: <span id="notifperm">Null</span></span>
+				<button class=uibutton style="margin:4px;" onclick="Notification.requestPermission().then(function(result) {document.getElementById('notifperm').innerText = result;});">Request</button>
 			</div>
 			<div id="servers" style="opacity: 0; position: absolute; width:100%;  height:100%">
 				<img id="scplogo" src="scpf.png" style="display: block; margin-left: auto; margin-right: auto; width: 25%; margin-top: 24px;" onload="Load()" ondragstart="return false;">
