--- a/s-messenger.html
+++ b/s-messenger.html
@@ -362,11 +362,12 @@
 			
 			function ChangeVersion(){
 				var rawFile = new XMLHttpRequest();
-				rawFile.open("GET", 'https://greatcorn.github.io/scom/version.txt', true);
+				rawFile.open("GET", 'https://greatcorn.github.io/scom/manifest.json', true);
 				rawFile.onload = function (){
 					if(rawFile.readyState === rawFile.DONE){
 						if(rawFile.status === 200 || rawFile.status == 0){
-							var allText = rawFile.responseText;
+							var allText = JSON.stringify(rawFile.responseText).version;
+							console.log(allText);
 							version = allText;
 							document.getElementById("versionShow").innerText = "Version "+version;
 						}
@@ -386,7 +387,7 @@
 				rawFile.onload = function (){
 					if(rawFile.readyState === rawFile.DONE){
 						if(rawFile.status === 200 || rawFile.status == 0){
-							var allText = rawFile.responseText;
+							var allText = JSON.stringify(rawFile.responseText).version;
 							if(allText != version){
 								console.log("NEW VERSION FOUND");
 								var menu = document.getElementById("updateMenu");
